RESOLVED FIXED224188
[GStreamer] Heap allocation exceptions
https://bugs.webkit.org/show_bug.cgi?id=224188
Summary [GStreamer] Heap allocation exceptions
Philippe Normand
Reported 2021-04-05 09:35:28 PDT
.
Attachments
Patch (3.97 KB, patch)
2021-04-05 09:40 PDT, Philippe Normand
no flags
Philippe Normand
Comment 1 2021-04-05 09:40:08 PDT
EWS
Comment 2 2021-04-06 06:25:05 PDT
Committed r275511: <https://commits.webkit.org/r275511> All reviewed patches have been landed. Closing bug and clearing flags on attachment 425160 [details].
Radar WebKit Bug Importer
Comment 3 2021-04-06 06:26:13 PDT
Note You need to log in before you can comment on or make changes to this bug.